--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
          </div>
          <p>Click the button to download my resume! :)</p>
          <button>
-           <a id="download" href="https://storage.googleapis.com/uxfolio/5cd9ddd5a1bc170004222e60/cv/Casandra-McDonald-Resume_efO.pdf" target="_blank">Download my resume</a>
+           <a id="download" href="./assets/Casandra-McDonald-Resume.pdf" target="_blank">Download my resume</a>
          </button>
        </section>
         <hr>
