--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <p>As a <strong>UX Designer</strong>, I believe in user-centric design, and enforce those principles even throughout the design process. I follow the double diamond framework when starting any UX project: Discover, Design, Develop, Deliver. I work with companies on business strategy, perform competitive analysis, conduct user interviews, contextual inquiries, and usability testing. I also develop user personas, user flows, and feature prioritization with MVP focus. I possess a keen understanding of market dynamics that impact the successful launch of applications. </p>
           <p>As a <strong>UI Designer</strong>, I follow all up to date HCI and W3C guidelines for accessibly on desktop and mobile applications. I would describe my work as clean, beautiful, and asthetically pleasing. I conform to a "less is more" methodology and apply that approach to reduce cognitive friction throughout all of my design deliverables. I create sketches and low, mid, and high fidelity mockups using Adobe XD and am well-versed in creating extremely detailed interactive prototypes with custom animations using XD and Principle. I frequently work with development teams to ensure pixel perfect asset delivery and create follow up documentation and style guides. </p>
           <p>As a <strong>Front-End Engineer</strong>, my goal is to write clean, semantic, accessible code. I work with HTML5, CSS3, JavaScript, and jQuery and PHP. I have hand coded over 200+ responsive websites and have experience building apps and APIs with JS, Firebase, Node.js, Express and Heroku. I am currently in school at Columbia University Software Engineering Bootcamp until Summer 2021 to expand my existing skillset in the Full Stack Development realm. </p>
-          <iframe width="500" height="265" src="https://www.youtube.com/embed/dw9MxyBWD6s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="400" height="265" src="https://www.youtube.com/embed/dw9MxyBWD6s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
         <hr>
         <section id="work">
@@ -87,33 +87,10 @@
         <hr>
       <section id="contact">
         <h2>Contact.</h2>
-        <p>Fill out the form to get in touch.</p>
-        <!--This is not a working form-->
-        <div class="contact-form">
-          <div class="row">
-            <form class="col s12">
-              <div class="row">
-                <div class="input-field col s6">
-                  <input id="name" type="text" class="validate">
-                  <label for="first_name">Name</label>
-                </div>
-              </div>
-              <div class="row">
-                <div class="input-field col s12">
-                  <input id="email" type="email" class="validate">
-                  <label for="email">Email</label>
-                </div>
-              </div>
-                <div class="row">
-                  <div class="input-field col s12">
-                    <textarea id="textarea" class="materialize-textarea" data-length="120"></textarea>
-                    <label for="textarea">Message</label>
-                    </div>
-                  </div>
-                </form>
-              </div>
-           </div>
-          <!-- END:this is not a working form-->
+        <p>Here are my details to get in touch.</p>
+          <div class="details">
+            <p>Email: <a href="mailto:cas@casmcdonald.com">Cas@casmcdonald.com</a></p>
+          </div>
             <nav>
              <ul class="social">
                <li id="fa-no-padding"><a class="fontawesome" href="https://www.linkedin.com/in/casmcdonald/" target="_blank"></li>
