final updates to images

--- a/index.html
+++ b/index.html
@@ -43,28 +43,32 @@
           <h2>Featured Work.</h2>
           <div class="first-featured-work">
             <figure>
-              <a href="https://www.s3partners.com" target="_blank"><img src="./assets/images/first-work.png" alt="First Featured Work Finance Application"></img></a>
+              <a href="https://defy1x.github.io/Star-Wars-Quiz/" target="_blank"><img src="./assets/images/first-work.png" alt="First Featured Work Star Wars Quiz"></img></a>
             </figure>
-            <p>Fintech app and website designed and developed in HTML/CSS/JS and Angular.</p>
+            <p>Star Wars Personality Test built in HTML, CSS, & JS, that uses GIPHY and SWAPI.</p>
+            <p><a href="https://defy1x.github.io/Star-Wars-Quiz/" target="_blank">Try it</a> or <a href="https://github.com/Defy1x/Star-Wars-Quiz" target="_blank">See the Code</a></p>
           </div>
           <div class="carousel">
             <div class="carousel-item">
               <figure>
-                <a href="https://uxfol.io/project/040d8f48/Websim-iOS-App" target="_blank"> <img src="./assets/images/work-1.jpg" alt="Second Featured Work Quant Finance App"></a>
+                <a href="https://defy1x.github.io/c03-Password-Generator/index.html" target="_blank"> <img src="./assets/images/work-1.jpg" alt="Second Featured Work Password Generator"></a>
               </figure>
-              <p>Quantative Finance UX/UI case study for #1 Quant app launched on iOS store.</p>
+              <p>A Star Wars Password Generator built in JS.</p>
+              <p><a href="https://defy1x.github.io/c03-Password-Generator/index.html" target="_blank">Try it</a> or <a href="https://github.com/Defy1x/c03-Password-Generator" target="_blank">See the Code</a></p>
             </div>
             <div class="carousel-item">
               <figure>
-                <a href="https://uxfol.io/project/045f5511/Jolt" target="_blank"> <img src="./assets/images/work-2.jpg" alt="Third Feature Work Music Mood Selector App"></a>
+                <a href="https://defy1x.github.io/c06-weather-app/" target="_blank"> <img src="./assets/images/work-2.jpg" alt="Third Feature Work Weather App"></a>
               </figure>
-              <p>Music Mood Selector UX/UI case study designed as an app plug-in to Spotify.</p>
+              <p>Weather App built in JS that uses OpenWeatherApi.</p>
+              <p><a href="https://defy1x.github.io/c06-weather-app/" target="_blank">Try it</a> or <a href="https://github.com/Defy1x/c06-weather-app" target="_blank">See the Code</a></p>
             </div>
             <div class="carousel-item">
               <figure>
-                <a href="https://uxfol.io/project/0489b407/Thrive" target="_blank"><img src="./assets/images/work-3.jpg" alt="Fourth Featured Work Social Gaming App"></a>
+                <a href="https://defy1x.github.io/c04-Code-Quiz/" target="_blank"><img src="./assets/images/work-3.jpg" alt="Fourth Featured Work Coding Quiz"></a>
               </figure>
-              <p>Social Gaming App UX/UI case study designed for the React Framework.</p>
+              <p>Happy Coding Quiz Project built in HTML, CSS, JS.</p>
+              <p><a href="https://defy1x.github.io/c04-Code-Quiz/index.html" target="_blank">Try it</a> or <a href="https://github.com/Defy1x/c04-Code-Quiz" target="_blank">See the Code</a></p>
           </div>
        </div>
        </section>
