--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <figure>
               <a href="https://defy1x.github.io/Star-Wars-Quiz/" target="_blank"><img src="./assets/images/first-work.png" alt="First Featured Work Star Wars Quiz"></img></a>
             </figure>
-            <p>Star Wars Personality Test built in HTML, CSS, & JS, that uses GIPHY and SWAPI.</p>
+            <p>Star Wars Personality Test built in HTML, CSS, & JS. Uses GIPHY and SWAPI.</p>
             <p><a href="https://defy1x.github.io/Star-Wars-Quiz/" target="_blank">Try it</a> or <a href="https://github.com/Defy1x/Star-Wars-Quiz" target="_blank">See the Code</a></p>
           </div>
           <div class="carousel">
