--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <h2>Contact.</h2>
         <p>Here are my details to get in touch.</p>
           <div class="details">
-            <p>Email: <a href="mailto:cas@casmcdonald.com">Cas@casmcdonald.com</a></p>
+            <p>Email: <a href="mailto:cas@casmcdonald.com?subject=Heya%20Cas%20From%20Portfolio%20Site">Cas@casmcdonald.com</a></p>
           </div>
             <nav>
              <ul class="social">
