--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <figure>
                 <a href="https://defy1x.github.io/c03-Password-Generator/index.html" target="_blank"> <img src="./assets/images/work-1.jpg" alt="Second Featured Work Password Generator"></a>
               </figure>
-              <p>A Star Wars Password Generator built in HTML, CSS, & JS.</p>
+              <p>A Star Wars Password Generator built in JS.</p>
               <p><a href="https://defy1x.github.io/c03-Password-Generator/index.html" target="_blank">Try it</a> or <a href="https://github.com/Defy1x/c03-Password-Generator" target="_blank">See the Code</a></p>
             </div>
             <div class="carousel-item">
