--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
             <p>Video Game Tracking app using Front end, SQL, & Express & RAWG API.</p>
             <p><a href="https://guarded-headland-14950.herokuapp.com/signin" target="_blank">Try it</a> or <a href="https://github.com/Defy1x/Queued-Video-Game-Tracker-App" target="_blank">See the Code</a></p>
             <figure>
-              <a href="https://defy1x.github.io/Star-Wars-Quiz/" target="_blank"><img src="./assets/images/first-work.png" alt="Second Featured Work Star Wars Quiz"></img></a>
+              <a href="https://www.casctrl.com/starwars/index.html" target="_blank"><img src="./assets/images/first-work.png" alt="Second Featured Work Star Wars Quiz"></img></a>
             </figure>
             <p>Star Wars Personality Test built in HTML, CSS, & JS. Uses GIPHY and SWAPI.</p>
-            <p><a href="https://defy1x.github.io/Star-Wars-Quiz/" target="_blank">Try it</a> or <a href="https://github.com/Defy1x/Star-Wars-Quiz" target="_blank">See the Code</a></p>
+            <p><a href="https://defy1x.github.io/Star-Wars-Quiz/" target="_blank">Try it</a> or <a href="https://www.casctrl.com/starwars/index.html" target="_blank">See the Code</a></p>
           </div>
           <div class="carousel">
             <div class="carousel-item">
